# nos-vulkan-lib

./: .gitignore  .gitmodules  Allocator.cpp  Allocator.h  Binding.cpp  Binding.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Command.cpp  Command.h  Common.h  DXGIFormatMapping.c  Device.cpp  Device.h  Dummypass.cpp  DynamicPipeline.cpp  DynamicPipeline.h  DynamicPipeline1.cpp  GlobVS.vert  Image.cpp  Image.h  InfoStructs.h  Layout.cpp  Layout.h  NativeAPI.h  NativeAPID3D12.cpp  NativeAPID3D12.h  Pipeline.h  Renderpass.h  Shader.cpp  Shader.h  ShaderCompiler.h  mzVkCommon.cpp  mzVkCommon.h  mzVulkan.natvis  nosVulkan.natvis  shader_data.cpp
Include/: Allocator.h  Binding.h  Buffer.h  Command.h  DeletionQueue.h  Device.h  DynamicPipeline.h  Image.h  Layout.h  NativeAPI.h  NativeAPID3D12.h  NativeAPIDirectx.h  Pipeline.h  Renderpass.h  Semaphore.h  Shader.h  StandardPipeline.h  Stream.h  mzVkCommon.h
Include/mzVulkan/: Allocation.h  Allocator.h  Binding.h  Buffer.h  Command.h  Common.h  DeletionQueue.h  Device.h  Image.h  Layout.h  NativeAPI.h  NativeAPIDirectx.h  Pipeline.h  QueryPool.h  Renderpass.h  Semaphore.h  Shader.h  Stream.h  mzVkCommon.h
Include/nosVulkan/: Allocation.h  Binding.h  Buffer.h  Command.h  Common.h  Device.h  Image.h  Layout.h  NativeAPI.h  NativeAPIDirectx.h  Pipeline.h  Platform.h  QueryPool.h  Renderpass.h  ResourcePool.hpp  Semaphore.h  Shader.h  Stream.h
Source/: Allocation.cpp  Allocator.cpp  Binding.cpp  Buffer.cpp  Command.cpp  Common.cpp  DXGIFormatMapping.c  DeletionQueue.cpp  Device.cpp  DynamicPipeline.cpp  DynamicPipeline1.cpp  GlobVS.h  Image.cpp  Layout.cpp  NativeAPID3D12.cpp  Pipeline.cpp  Platform.cpp  PlatformLinux.cpp  PlatformWindows.cpp  QueryPool.cpp  Renderpass.cpp  Semaphore.cpp  Shader.cpp  StandardPipeline.cpp  Stream.cpp  mzVkCommon.cpp
Tests/: Main.cpp
vkEditor.patch/: 0001-Add-platform-codes-with-macros-use-vulkan.hpp-Dynami.patch
